# BrandMuse

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
src/analyzers/: consistency.py  tone.py
src/api/: server.ts
src/core/: auditor.ts  generator.ts  voice.ts
tests/: test_tone.py  test_voice.ts
