[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandmuse-py"
version = "0.1.0"
description = "Python analyzers for brand voice and tone"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analyzers"]

[tool.ruff]
target-version = "py311"
line-length = 100
